# Calcexpr

./: .gitignore  CMakeLists.txt  README.md
include/: calcexpr.h
src/: calcexpr.c  main  main.c
