cmake_minimum_required(VERSION 3.10)
project(Calcexpr C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(Calcexpr_VERSION_MAJOR 1)
set(Calcexpr_VERSION_MINOR 0)
set(Calcexpr_VERSION_PATCH 1)
add_executable(calcexpr src/main.c src/calcexpr.c)
target_include_directories(calcexpr PRIVATE include)
